# mpu6050-rs

./: Cargo.toml  README.md
examples/: usage_demo.rs
src/: error.rs  lib.rs  numeric.rs
src/config/: builder.rs  config_struct.rs  mod.rs
src/driver/: calibrate.rs  config_ops.rs  fifo.rs  interrupt.rs  mod.rs  power.rs  read.rs  reg_rw.rs
src/register/: mod.rs
