[package]
authors = ["Alddp <1906701331@qq.com>"]
edition = "2024"
name = "mpu6050"
version = "0.2.0"
license = "MIT OR Apache-2.0"
description = "高效、易用的 MPU6050 六轴传感器 Rust 驱动库，支持 async/await"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mpu6050", "imu", "embedded-hal", "async"]

[dependencies]
embedded-hal-async = { version = "1.0.0" }
embassy-time = { version = "0.5.0"}
embedded-hal = { version = "1.0.0" }
libm = "0.2.15"
fixed = { version = "1.29.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }

[lib]
test = false
bench = false
